# goto-tile

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  note.tex  pyproject.toml  requirements.txt  setup.py  tileskymap.py
.github/workflows/: ruff.yml
docs/: plot.ipynb  skymap.ipynb  weighting.ipynb
gototile/: __init__.py  catalog.py  cmap.py  constants.py  core.py  extinction.py  fermi.py  fits.py  galtools.py  gaussian.py  geometry.py  grid.py  gridtools.py  log.py  math.py  parser.py  plottools.py  scopetools.py  settings.py  simtools.py  skymap.py  skymaptools.py  telescope.py  utils.py
gototile/app/: __init__.py  apps.py  urls.py  utils.py  views.py
gototile/app/static/gototile/css/: skymap.css
gototile/app/templates/gototile/: skymap.html
gototile/tests/: test_astropy.py  test_grid.py
gototile/webtile/: forms.py  urls.py  utils.py  views.py
gototile/webtile/static/webtile/css/: skymap.css
gototile/webtile/static/webtile/js/: skymap.js
gototile/webtile/templates/webtile/: skymap.html
scripts/: create-grid  create-grid.py  f2ytile  gototile  gototileold  gwgc2simplecat.py  plot-site-visibility.py  postmap  site-visibility.py  tileskymap  tileskymap-new
src/gototile/: __init__.py  catalog.py  cli.py  extinction.py  gaussian.py  geometry.py  grid.py  skymap.py  skymaptools.py  version.py
tests/: __init__.py  test_grid.py
tools/: cmap.py  fits.py  galtools.py  grid.py  plottools.py  requirements.txt  skymaptools.py
